...
    func createEndGameButtons() {
        
        restartButton = SKSpriteNode(imageNamed: "Retry")
        restartButton.position = CGPoint(x: self.frame.width / 4, y: self.frame.height * 2 / 5)
        restartButton.size = CGSize(width: self.frame.width * 5 / 14, height: self.frame.height / 10)
        restartButton.zPosition = 6
        restartButton.accessibilityLabel = "RestartButton"
        print(restartButton.frame.origin.x)
        print(restartButton.frame.origin.y)
        quitButton = SKSpriteNode(imageNamed: "Quit")
        quitButton.position = CGPoint(x: self.frame.width * 3 / 4, y: self.frame.height * 2 / 5)
        quitButton.size = CGSize(width: self.frame.width * 5 / 14, height: self.frame.height / 10)
        quitButton.zPosition = 6
        quitButton.accessibilityLabel = "QuitButton"
        self.addChild(restartButton)
        self.addChild(quitButton)
    }
    
    // MARK: - Increments the score counter and label for every timer interval
    // Input:
...
    func initAccessibility() {
        if accessibleElements.count == 0 {
            let elemForEndGameLabel = UIAccessibilityElement(accessibilityContainer: self.view!)
            var frameForEndGameLabel = endGameLabel.frame
            frameForEndGameLabel.origin = (view?.convert(frameForEndGameLabel.origin, from: self))!
            frameForEndGameLabel.origin.y = frameForEndGameLabel.origin.y - frameForEndGameLabel.size.height
            elemForEndGameLabel.accessibilityLabel = "EndGameLabel"
            elemForEndGameLabel.accessibilityFrame = frameForEndGameLabel
            elemForEndGameLabel.accessibilityTraits = UIAccessibilityTraits.staticText
            accessibleElements.append(elemForEndGameLabel)
            
            let elemForStartGameLabel = UIAccessibilityElement(accessibilityContainer: self.view!)
            var frameForStartGameLabel = startGameLabel.frame
            frameForStartGameLabel.origin = (view?.convert(frameForStartGameLabel.origin, from: self))!
            frameForStartGameLabel.origin.y = frameForStartGameLabel.origin.y - frameForStartGameLabel.size.height
            elemForStartGameLabel.accessibilityLabel = "StartGameLabel"
            elemForStartGameLabel.accessibilityFrame = frameForStartGameLabel
            elemForStartGameLabel.accessibilityTraits = UIAccessibilityTraits.staticText
            accessibleElements.append(elemForStartGameLabel)
            
            let elemForRestartButton = UIAccessibilityElement(accessibilityContainer: self.view!)
            var frameForRestartButton = restartButton.frame
...
