...
            <objects>
                <viewController modalPresentationStyle="fullScreen" id="VeW-pG-iBl" customClass="MotorGameViewController" customModule="UnHindr" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="XoD-fF-TBp" customClass="SKView">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="awc-kx-vLC" userLabel="MotorGameHomeButton">
                                <rect key="frame" x="10" y="20" width="42" height="30"/>
                                <accessibility key="accessibilityConfiguration" label="MotorGameHomeButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="jx1-cd-gOJ"/>
                                    <constraint firstAttribute="width" secondItem="awc-kx-vLC" secondAttribute="height" multiplier="111:79" id="m2v-6a-tcX"/>
                                </constraints>
...
