...
                                <subviews>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="60" translatesAutoresizingMaskIntoConstraints="NO" id="Vlh-CC-4CE">
                                        <rect key="frame" x="31" y="30" width="352" height="728"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sLH-Hv-FxY" userLabel="Cog">
                                                <rect key="frame" x="0.0" y="0.0" width="352" height="145"/>
                                                <state key="normal" image="CogGame graph button"/>
                                                <connections>
                                                    <segue destination="5Tg-Zv-11V" kind="show" id="iSI-wc-H8V"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gdd-Lq-6j6" userLabel="Mood">
                                                <rect key="frame" x="0.0" y="205" width="352" height="145"/>
                                                <state key="normal" image="Mood Graph Button"/>
                                                <connections>
                                                    <segue destination="WUz-gb-EjB" kind="show" id="WaK-9j-MBb"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xNr-dU-86G" userLabel="Motor">
                                                <rect key="frame" x="0.0" y="410" width="352" height="145"/>
                                                <state key="normal" image="Motorgame graph button"/>
                                                <connections>
                                                    <segue destination="85w-Ie-q5Z" kind="show" id="fcf-pJ-VOj"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x92-QH-AAe" userLabel="Back">
                                                <rect key="frame" x="0.0" y="615" width="352" height="113"/>
...
