...
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0WO-ud-WYe">
                                <rect key="frame" x="151.5" y="145" width="111" height="156"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="111" id="VQf-fM-Tpc"/>
                                </constraints>
                                <state key="normal" title="Month" image="Month 1">
                                    <color key="titleColor" red="0.1215686277" green="0.1294117719" blue="0.1411764771" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <segue destination="zHA-PJ-HeT" kind="show" id="crn-VN-4OD"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yVK-uQ-vHw">
                                <rect key="frame" x="283" y="145" width="111" height="156"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="111" id="r5i-3K-Uzj"/>
                                </constraints>
                                <state key="normal" title="Year" image="Year 1">
                                    <color key="titleColor" red="0.1215686277" green="0.1294117719" blue="0.1411764771" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <segue destination="mr2-On-MtB" kind="show" id="SpZ-qW-D9b"/>
                                </connections>
                            </button>
...
